# mobius-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  skills  spec.yaml  spec.yaml.v1.bak
.claude/: commands
.claude/commands/: evolve.md  run.md  status.md
.github/workflows/: ci.yml  perf-guard.yml
bench/: ci_perf_guard.py  cold_start.py  status.py
docs/: agent-integration.md  architecture.md  benchmarks.md  cli-reference.md  migration-from-ouroboros.md  project-types.md  uat-interview-v0.1.4.md  uat-multi-project-v0.1.4.md
docs/adr/: 0001-mobius-is-a-tracker-not-a-runner.md  0002-closed-typed-event-grammar.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
hooks/: drift-monitor.py  keyword-detector.py  session-start.py
scripts/: lint_imports.py
skills/ac-tree/: SKILL.md
skills/cancel/: SKILL.md
skills/evolve/: SKILL.md
skills/help/: SKILL.md
skills/interview/: SKILL.md
skills/lineage/: SKILL.md
skills/setup/: SKILL.md
src/mobius/: __init__.py  config.py  logging.py
tests/: test_no_stdout_print.py
tests/chaos/: conftest.py  test_chaos_robustness.py  test_kill_storm.py
tests/e2e/: conftest.py  test_agent_workflow_simulation.py  test_grade_gold.py  test_installed_binary_contract.py  test_mobius_entrypoint.py  test_packaging_release.py  test_setup.py  test_v3a_auto_handoff.py  test_v3a_first_run_tour.py  test_v3a_interview_todo.py  test_v3a_maturity_gate.py  test_v3a_oracle_corpus.py  test_v3a_phase_router_resume.py  test_v3a_phases_walkthrough.py  test_v3a_product_matrix.py  test_v3a_scoring_rerun_jitter.py  test_v3a_seed_handoff.py
tests/integration/: test_v3a_real_llm.py
tests/unit/: conftest.py  test_agent_skills.py  test_benchmarks.py  test_ci_workflow.py  test_cold_start.py  test_config.py  test_coverage_residuals.py  test_docs_release.py  test_grade.py  test_handoff.py  test_handoff_contract.py  test_hooks_keyword_detector.py  test_hud.py  test_logging.py  test_project_scaffold.py  test_projections.py  test_seed_fuzz.py  test_v014_coverage.py  (+29 more)
(+187 files in other folders)
